Move APIs to the jakarta.* package for the 2.0 release. Update copyrights.